# engine

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  OpenCode.md  PR_PREVIEW_SETUP.md  README.md  fly.review.toml  fly.toml  output.txt  setup-pr-previews.sh
.github/workflows/: claude.yml  fly-deploy.yml  fly-review.yml  pr-preview-cleanup.yml  pr-preview-deploy.yml  release.yml
debug-ui/: package-lock.json  package.json  pnpm-lock.yaml
debug-ui/app/: globals.css  lfo.tsx  mixer.tsx  page.tsx  sequencer.tsx  spectrum-analyzer.tsx  wasm-test.tsx  webAudioKick.tsx
debug-ui/app/react/: page.tsx
debug-ui/app/tabs/: kick-drum-tab.tsx
debug-ui/lib/: config.ts  index.ts  webAudioStage.ts
debug-ui/lib/instruments/: webAudioKickDrum.ts
debug-ui/src/: kick.ts  libgooey.ts
lib/: Cargo.toml
lib/examples/: hihat.rs  kick.rs  snare.rs  traits_demo.rs
lib/src/: compressor.rs  envelope.rs  fm_oscillator.rs  hihat.rs  instrument.rs  kick.rs  lib.rs  main.rs  noise.rs  oscillator.rs  snare.rs  stage.rs  tom.rs  waveform.rs
lib/src/effects/: chorus.rs  distortion.rs  mod.rs
lib/src/filters/: chorus.rs  mod.rs  resonant_highpass.rs  resonant_lowpass.rs
lib/src/instruments/: hihat.rs  kick.rs  mod.rs
lib/src/modulation/: lfo.rs  mod.rs
lib/src/platform/: cpal_output.rs  mod.rs
lib/src/playback/: mod.rs
libgooey-react/: README.md  example.tsx  package.json  tsconfig.json
libgooey-react/src/: index.ts
src/: main.rs
workflows-to-add/: pr-preview-cleanup.yml  pr-preview-deploy.yml
