[package]
name = "oscillator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["cpal"]
web = []

[dependencies]
cpal = { version = "0.15", optional = true }
anyhow = "1.0"
clap = { version = "4.0", optional = true }
rand = "0.8"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["AudioContext"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["AudioContext"] }
getrandom = { version = "0.2", features = ["js"] }
